--- a/src/app/landing/pages/main-page/main-page.component.html
+++ b/src/app/landing/pages/main-page/main-page.component.html
@@ -1,1 +1,34 @@
-<p>main-page works!</p>
+<div class="container-fluid text-center hero-image">
+    <div class="row justify-content-center">
+        <div class="col-3 mt-4">
+            <img src="/assets/white-logo.png" alt="Bootstrap" class="img-fluid">
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col banner-title">
+            <h1>CASA ARENA</h1>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col">
+            <p>Nos dedicamos a la fabricación de piezas únicas y la enseñanza de la tierra</p>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col mb-4">
+            <p style="font-weight: 100;">Ubicados en la Ciudad de Puebla</p>
+        </div>
+    </div>
+</div>
+<div class="container-fluid text-center" style="margin-top: 60px;">
+    <div class="row justify-content-center">
+        <div class="col-8 secondary-banner">
+            <h1>Lorem ipsum dolor sit. Voluptatibus non, deleniti minima itaque beatae ad? Esse?</h1>
+        </div>
+    </div>
+    <div class="row justify-content-center mt-3">
+        <div class="col-5">
+            <button type="button" class="btn btn-outline-secondary rounded-0 banner-button">NUESTRO CATÁLOGO</button>
+        </div>
+    </div>
+</div>
