--- a/src/app/landing/pages/main-page/main-page.component.html
+++ b/src/app/landing/pages/main-page/main-page.component.html
@@ -20,7 +20,8 @@
         </div>
     </div>
 </div>
-<div class="container-fluid text-center" style="margin-top: 60px;">
+
+<div class="container-fluid text-center" style="margin: 100px 0;">
     <div class="row justify-content-center">
         <div class="col-8 secondary-banner">
             <h1>Lorem ipsum dolor sit. Voluptatibus non, deleniti minima itaque beatae ad? Esse?</h1>
@@ -29,6 +30,30 @@
     <div class="row justify-content-center mt-3">
         <div class="col-5">
             <button type="button" class="btn btn-outline-secondary rounded-0 banner-button">NUESTRO CATÁLOGO</button>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid" style="margin-bottom: 80px;">
+    <div class="row" style="margin: 50px;">
+        <div class="col-md-6 col-xs-12 px-md-5">
+            <img src="/assets/home-us-1.png" alt="Bootstrap" class="img-fluid">
+        </div>
+        <div class="col-md-6 col-xs-12 px-md-5 py-4">
+            <h2>Lorem ipsum dolor sit. Voluptatibus non, deleniti minima itaque beatae ad? Esse?</h2>
+            <p class="p-home-us mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem quod iure similique iste! At eveniet quas blanditiis voluptatum, ea dolorum deleniti recusandae autem quisquam molestiae ipsum. Nesciunt, saepe perferendis!</p>
+            <p class="p-home-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem asperiores sequi iusto consequuntur assumenda eveniet officia quis eos vel, consequatur voluptas soluta illo ratione totam aliquam magni. Velit, sapiente natus!</p>
+            <p class="p-home-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia exercitationem, non facere optio rem assumenda dicta quasi iste! Suscipit vero corrupti dolores accusamus dolorum officia aliquam nemo quia! Dolorem, officiis.</p>
+        </div>
+    </div>
+    <div class="row" style="margin: 50px;">
+        <div class="col-md-6 col-xs-12 px-md-5 py-4">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi cum quas voluptatum.</h2>
+            <p class="p-home-us mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repudiandae, neque illo dolorem cupiditate veniam tempora, sunt dicta corrupti facere dolorum, perferendis explicabo? Veniam a eveniet nisi obcaecati? In, natus.</p>
+            <p class="p-home-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi natus expedita, incidunt praesentium quod qui sit illum minima voluptatem, suscipit dolorum magni aliquid maxime iure iusto saepe impedit voluptatibus debitis!</p>
+        </div>
+        <div class="col-md-6 col-xs-12 px-md-5">
+            <img src="/assets/home-us-2.png" alt="Bootstrap" class="img-fluid">
         </div>
     </div>
 </div>
