--- a/src/app/landing/pages/layout-page/layout-page.component.html
+++ b/src/app/landing/pages/layout-page/layout-page.component.html
@@ -1,25 +1,5 @@
-<nav class="navbar bg-body-tertiary navbar-expand-lg">
-    <div class="container-fluid" style=" font-weight: 100;">
-        <a class="navbar-brand" href="#">
-            <img src="/assets/logo.png" alt="Bootstrap" width="50" style="margin: 2px 15px;" class="d-inline-block align-text-center"> CASA ARENA
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active mx-2" aria-current="page" href="#">TALLERES</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-2" href="#">CATÁLOGO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-2" href="#">CONTÁCTANOS</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<app-casa-arena-header></app-casa-arena-header>
 
 <router-outlet></router-outlet>
+
+<app-casa-arena-footer></app-casa-arena-footer>
