--- a/src/app/landing/pages/main-page/main-page.component.html
+++ b/src/app/landing/pages/main-page/main-page.component.html
@@ -57,3 +57,19 @@
         </div>
     </div>
 </div>
+
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-12 px-0">
+            <iframe
+                width="100%"
+                height="400"
+                style="border:0"
+                loading="lazy"
+                allowfullscreen
+                referrerpolicy="no-referrer-when-downgrade"
+                [src]='mapsUrl'>
+            </iframe>
+        </div>
+    </div>
+</div>
