--- a/src/app/shared/components/casa-arena-footer/casa-arena-footer.component.html
+++ b/src/app/shared/components/casa-arena-footer/casa-arena-footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5 casa-arena-footer">
+<div class="container-fluid casa-arena-footer">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
         <a href="/" class="me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
