--- a/src/app/landing/pages/main-page/main-page.component.html
+++ b/src/app/landing/pages/main-page/main-page.component.html
@@ -36,18 +36,17 @@
 
 <div class="container-fluid" style="margin-bottom: 80px;">
     <div class="row" style="margin: 50px;">
-        <div class="col-md-6 col-xs-12 px-md-5">
+        <div class="col-md-6 col-xs-12 px-md-5 mb-5">
             <img src="/assets/home-us-1.png" alt="Bootstrap" class="img-fluid">
         </div>
-        <div class="col-md-6 col-xs-12 px-md-5 py-4">
+        <div class="col-md-6 col-xs-12 px-md-5">
             <h2>Lorem ipsum dolor sit. Voluptatibus non, deleniti minima itaque beatae ad? Esse?</h2>
             <p class="p-home-us mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem quod iure similique iste! At eveniet quas blanditiis voluptatum, ea dolorum deleniti recusandae autem quisquam molestiae ipsum. Nesciunt, saepe perferendis!</p>
             <p class="p-home-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem asperiores sequi iusto consequuntur assumenda eveniet officia quis eos vel, consequatur voluptas soluta illo ratione totam aliquam magni. Velit, sapiente natus!</p>
-            <p class="p-home-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia exercitationem, non facere optio rem assumenda dicta quasi iste! Suscipit vero corrupti dolores accusamus dolorum officia aliquam nemo quia! Dolorem, officiis.</p>
         </div>
     </div>
     <div class="row" style="margin: 50px;">
-        <div class="col-md-6 col-xs-12 px-md-5 py-4">
+        <div class="col-md-6 col-xs-12 px-md-5 mb-5">
             <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi cum quas voluptatum.</h2>
             <p class="p-home-us mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repudiandae, neque illo dolorem cupiditate veniam tempora, sunt dicta corrupti facere dolorum, perferendis explicabo? Veniam a eveniet nisi obcaecati? In, natus.</p>
             <p class="p-home-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi natus expedita, incidunt praesentium quod qui sit illum minima voluptatem, suscipit dolorum magni aliquid maxime iure iusto saepe impedit voluptatibus debitis!</p>
