--- a/src/app/shared/components/casa-arena-header/casa-arena-header.component.html
+++ b/src/app/shared/components/casa-arena-header/casa-arena-header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar bg-body-tertiary navbar-expand-lg">
     <div class="container-fluid" style=" font-weight: 100;">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" routerLink="/landing/home">
             <img src="/assets/logo.png" alt="Bootstrap" width="50" style="margin: 2px 15px;" class="d-inline-block align-text-center"> CASA ARENA
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,7 +15,7 @@
                     <a class="nav-link mx-2" href="#">CATÁLOGO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-2" href="#">CONTÁCTANOS</a>
+                    <a class="nav-link mx-2" routerLink="/landing/contact">CONTÁCTANOS</a>
                 </li>
             </ul>
         </div>
