ref: set cdn ref instead literal assets

--- a/src/app/landing/pages/contact-page/contact-page.component.html
+++ b/src/app/landing/pages/contact-page/contact-page.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-md-6 col-xs-12 py-5 left-data text-center gradient-image"  style="height: 80vh;">
+        <div class="col-md-6 col-xs-12 py-5 left-data text-center gradient-image"  style="height: 80vh;" [ngStyle]="{backgroundImage:'linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)), url('+cdnUrl+'/images/t-banner.png?d=500x520)'}">
             <div class="row vertical-align">
                 <div class="row title">
                     <div class="col-12">
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-xs-12" style="padding: 150px 48px">
+        <div class="col-md-6 col-xs-12" style="padding: 130px 48px">
             <div class="row">
                 <div class="col-12 sub-title">
                     <p>¡ENVIANOS UN MENSAJE!</p>
