--- a/src/app/landing/pages/main-page/main-page.component.html
+++ b/src/app/landing/pages/main-page/main-page.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid text-center hero-image">
+<div class="container-fluid text-center hero-image" [ngStyle]="{backgroundImage:'linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('+cdnUrl+'/images/banner1.png?d=600x620)'}">
     <div class="row justify-content-center">
         <div class="col-3 mt-4">
-            <img src="/assets/white-logo.png" alt="Bootstrap" class="img-fluid">
+            <img src="{{cdnUrl}}/images/white-logo.png" alt="Bootstrap" class="img-fluid">
         </div>
     </div>
     <div class="row justify-content-center">
@@ -37,7 +37,7 @@
 <div class="container-fluid" style="margin-bottom: 80px;">
     <div class="row" style="margin: 50px;">
         <div class="col-md-6 col-xs-12 px-md-5 mb-5">
-            <img src="/assets/home-us-1.png" alt="Bootstrap" class="img-fluid">
+            <img src="{{cdnUrl}}/images/home-us-1.png?d=500x520" alt="Bootstrap" class="img-fluid">
         </div>
         <div class="col-md-6 col-xs-12 px-md-5">
             <h2>Lorem ipsum dolor sit. Voluptatibus non, deleniti minima itaque beatae ad? Esse?</h2>
@@ -52,7 +52,7 @@
             <p class="p-home-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi natus expedita, incidunt praesentium quod qui sit illum minima voluptatem, suscipit dolorum magni aliquid maxime iure iusto saepe impedit voluptatibus debitis!</p>
         </div>
         <div class="col-md-6 col-xs-12 px-md-5">
-            <img src="/assets/home-us-2.png" alt="Bootstrap" class="img-fluid">
+            <img src="{{cdnUrl}}/images/home-us-2.png?d=500x520" alt="Bootstrap" class="img-fluid">
         </div>
     </div>
 </div>
