fix: Parallax responsive fixes

--- a/src/app/landing/pages/contact-page/contact-page.component.html
+++ b/src/app/landing/pages/contact-page/contact-page.component.html
@@ -2,49 +2,49 @@
     <div class="row justify-content-center">
         <div class="col-md-6 col-xs-12 py-5 left-data text-center gradient-image"  style="height: 80vh;" [ngStyle]="{backgroundImage:'linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)), url('+cdnUrl+'/images/t-banner.png?d=500x520)'}">
             <div class="row vertical-align">
-                <div class="row title">
+                <div class="title">
                     <div class="col-12">
                         <h2>CONTACTO</h2>
                     </div>
                 </div>
-                <div class="row sub-title mt-4">
+                <div class="sub-title mt-4">
                     <div class="col-12">
                         <p>Taller San Manuel</p>
                     </div>
                 </div>
-                <div class="row text">
+                <div class="text">
                     <div class="col-12">
                         <span>Avenida San Ignacio 2424, Jardines de San Manuel, 72570, Puebla, Pue.</span>
                     </div>
                 </div>
-                <div class="row text">
+                <div class="text">
                     <div class="col-12">
                         <span>Lunes-Viernes de 11:00 a 20:00 y Sábados de 11:00 a 18:00 hrs.</span>
                     </div>
                 </div>
-                <div class="row sub-title mt-4">
+                <div class="sub-title mt-4">
                     <div class="col-12">
                         <p>Teléfono<p></p>
                     </div>
                 </div>
-                <div class="row text">
+                <div class="text">
                     <div class="col-12">
                         <span>Tel. 222 123 12 12</span>
                     </div>
                 </div>
-                <div class="row sub-title mt-4">
+                <div class="sub-title mt-4">
                     <div class="col-12">
                         <p>Email<p></p>
                     </div>
                 </div>
-                <div class="row text">
+                <div class="text">
                     <div class="col-12">
                         <span>example@gmail.com</span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-xs-12" style="padding: 130px 48px">
+        <div class="col-md-6 col-xs-12 mt-md-2 mt-lg-5" style="padding: 130px 48px">
             <div class="row">
                 <div class="col-12 sub-title">
                     <p>¡ENVIANOS UN MENSAJE!</p>
