--- a/src/app/landing/pages/contact-page/contact-page.component.html
+++ b/src/app/landing/pages/contact-page/contact-page.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-md-6 col-xs-12 py-5 left-data text-center gradient-image"  style="height: 80vh;" [ngStyle]="{backgroundImage:'linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)), url('+cdnUrl+'/images/t-banner.png?d=500x520)'}">
+        <div class="col-md-6 col-xs-12 py-5 left-data text-center gradient-image" [ngStyle]="{backgroundImage:'linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)), url('+cdnUrl+'/images/t-banner.png?d=500x520)'}">
             <div class="row vertical-align">
                 <div class="title">
                     <div class="col-12">
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-xs-12 mt-md-2 mt-lg-5" style="padding: 130px 48px">
+        <div class="col-md-6 col-xs-12 mt-md-2 mt-lg-5" style="padding: 100px 48px 140px 48px">
             <div class="row">
                 <div class="col-12 sub-title">
                     <p>¡ENVIANOS UN MENSAJE!</p>
