--- a/src/app/shared/components/casa-arena-header/casa-arena-header.component.html
+++ b/src/app/shared/components/casa-arena-header/casa-arena-header.component.html
@@ -9,13 +9,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active mx-2" aria-current="page" href="#">TALLERES</a>
+                    <a class="nav-link mx-2" routerLinkActive="active" routerLink="/landing/talleres">TALLERES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-2" href="#">CATÁLOGO</a>
+                    <a class="nav-link mx-2" routerLinkActive="active" href="#">CATÁLOGO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-2" routerLink="/landing/contact">CONTÁCTANOS</a>
+                    <a class="nav-link mx-2" routerLinkActive="active" routerLink="/landing/contact">CONTÁCTANOS</a>
                 </li>
             </ul>
         </div>
