--- a/src/app/landing/pages/main-page/main-page.component.css
+++ b/src/app/landing/pages/main-page/main-page.component.css
@@ -59,11 +59,11 @@ p {
 }
 
 .margin-paragraph {
-    margin: 50px;
+    padding: 20px 80px 80px 80px;
 }
 
 @media only screen and (min-width: 120px) and (max-width: 767.98px) {
     .margin-paragraph {
-        margin: 20px;
+        padding: 20px 60px 60px 60px;
     }
 }
