--- a/src/app/shared/components/casa-arena-header/casa-arena-header.component.html
+++ b/src/app/shared/components/casa-arena-header/casa-arena-header.component.html
@@ -11,8 +11,13 @@
                 <li class="nav-item">
                     <a class="nav-link mx-2" routerLinkActive="active" routerLink="/landing/talleres">TALLERES</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-2" routerLinkActive="active" href="#">CATÁLOGO</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" routerLinkActive="active" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    CATÁLOGO
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#" routerLink="/landing/catalogo/esmaltes">ESMALTES/ENGOBES</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mx-2" routerLinkActive="active" routerLink="/landing/contact">CONTÁCTANOS</a>
