feat: WIP engobes pages

--- a/src/app/landing/pages/engobes-page/engobes-page.component.html
+++ b/src/app/landing/pages/engobes-page/engobes-page.component.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center">
         <div class="col banner-title">
             <p>Catálogo</p>
-            <h2>ESMALTES</h2>
+            <h2>ENGOBES</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At distinctio minus accusamus dolores cum sint recusandae odit excepturi laudantium nihil et quaerat alias vel, incidunt dolore magni unde officiis facere.</p>
         </div>
     </div>
@@ -16,36 +16,36 @@
     <div class="row mb-3">
         <div class="col-md-3 col-6 mt-1">
             <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-1-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
+                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-9-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
                 <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
+                  <h5 class="card-title">ENGOBE COLOR X</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
                 </div>
               </div>
         </div>
         <div class="col-md-3 col-6 mt-1">
             <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-2-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
+                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-10-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
                 <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
+                  <h5 class="card-title">ENGOBE COLOR X</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
                 </div>
               </div>
         </div>
         <div class="col-md-3 col-6 mt-1">
             <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-3-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
+                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-11-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
                 <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
+                  <h5 class="card-title">ENGOBE COLOR X</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
                 </div>
               </div>
         </div>
         <div class="col-md-3 col-6 mt-1">
             <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-4-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
+                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-12-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
                 <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
+                  <h5 class="card-title">ENGOBE COLOR X</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
                 </div>
               </div>
@@ -53,36 +53,36 @@
 
         <div class="col-md-3 col-6 mt-1">
             <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-5-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
+                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-13-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
                 <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
+                  <h5 class="card-title">ENGOBE COLOR X</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
                 </div>
               </div>
         </div>
         <div class="col-md-3 col-6 mt-1">
             <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-6-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
+                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-14-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
                 <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
+                  <h5 class="card-title">ENGOBE COLOR X</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
                 </div>
               </div>
         </div>
         <div class="col-md-3 col-6 mt-1">
             <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-7-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
+                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-15-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
                 <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
+                  <h5 class="card-title">ENGOBE COLOR X</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
                 </div>
               </div>
         </div>
         <div class="col-md-3 col-6 mt-1">
             <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-8-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
+                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-16-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
                 <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
+                  <h5 class="card-title">ENGOBE COLOR X</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
                 </div>
               </div>
