--- a/src/app/shared/components/casa-arena-header/casa-arena-header.component.html
+++ b/src/app/shared/components/casa-arena-header/casa-arena-header.component.html
@@ -12,11 +12,10 @@
                     <a class="nav-link mx-2" routerLinkActive="active" routerLink="/landing/talleres">TALLERES</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" routerLinkActive="active" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    CATÁLOGO
-                    </a>
+                    <a class="nav-link dropdown-toggle" routerLinkActive="active" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">CATÁLOGO</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#" routerLink="/landing/catalogo/esmaltes">ESMALTES/ENGOBES</a></li>
+                      <li><a class="dropdown-item" routerLink="/landing/catalogo/esmaltes">ESMALTES</a></li>
+                      <li><a class="dropdown-item" routerLink="/landing/catalogo/engobes">ENGOBES</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
