--- a/src/app/landing/pages/esmaltes-page/esmaltes-page.component.html
+++ b/src/app/landing/pages/esmaltes-page/esmaltes-page.component.html
@@ -13,79 +13,14 @@
 </div>
 
 <div class="container-fluid text-center">
-    <div class="row mb-3">
-        <div class="col-md-3 col-6 mt-1">
-            <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-1-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
-                <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
-                </div>
-              </div>
-        </div>
-        <div class="col-md-3 col-6 mt-1">
-            <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-2-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
-                <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
-                </div>
-              </div>
-        </div>
-        <div class="col-md-3 col-6 mt-1">
-            <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-3-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
-                <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
-                </div>
-              </div>
-        </div>
-        <div class="col-md-3 col-6 mt-1">
-            <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-4-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
-                <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
-                </div>
-              </div>
-        </div>
-
-        <div class="col-md-3 col-6 mt-1">
-            <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-5-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
-                <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
-                </div>
-              </div>
-        </div>
-        <div class="col-md-3 col-6 mt-1">
-            <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-6-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
-                <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
-                </div>
-              </div>
-        </div>
-        <div class="col-md-3 col-6 mt-1">
-            <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-7-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
-                <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
-                </div>
-              </div>
-        </div>
-        <div class="col-md-3 col-6 mt-1">
-            <div class="card">
-                <img src="{{cdnUrl}}/images/Esmaltes/Background-less/Esmalte-8-removebg-preview.png?d=500x550" style="padding:10px;" class="card-img-top" alt="esmalte-img">
-                <div class="card-body">
-                  <h5 class="card-title">ESMALTE COLOR X</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit id aliquid distinctio labore</p>
-                </div>
-              </div>
-        </div>
-    </div>
+  <div class="row mb-3">
+      <div class="col-md-3 col-6 mt-1" *ngFor="let product of products">
+          <product-card
+              [image-path]=product.image
+              [title]=product.title
+              [description]=product.description
+              [price]=product.price
+          ></product-card>
+      </div>
+  </div>
 </div>
