--- a/src/app/landing/pages/main-page/main-page.component.html
+++ b/src/app/landing/pages/main-page/main-page.component.html
@@ -29,7 +29,7 @@
     </div>
     <div class="row justify-content-center mt-3">
         <div class="col-5">
-            <button type="button" class="btn btn-outline-secondary rounded-0 banner-button">NUESTRO CATÁLOGO</button>
+            <button type="button" class="btn btn-outline-secondary rounded-0 banner-button" routerLink="/landing/catalogo/esmaltes">NUESTRO CATÁLOGO</button>
         </div>
     </div>
 </div>
