--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <img src="{{cdnUrl}}{{imagePath}}" style="padding:10px;" class="card-img-top" alt="esmalte-img">
+    <img src="{{cdnUrl}}{{imagePreview}}" (load)="onImageLoad()" style="padding:10px;" class="card-img-top" alt="esmalte-img">
     <div class="card-body">
       <h5 class="card-title">{{title}}</h5>
       <p class="card-text">{{description}}</p>
